fix: adjust documentation
